perfis ajustados e swagger para documentação implementado

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.profiles.active=test
 
 jwt.secret=StringUsadaParaGerarTokenGabriel
 jwt.expiration=604800000
+
+springdoc.packagesToScan=com.gabriel.helpdesk
+springdoc.pathsToMatch=/tecnicos/**, /clientes/**, /chamados/**
